calico-policies/private-network-isolation/calico-v3/us-south/allow-icmp-private.yaml
# This policy opens the ICMP protocol to allow infrastructure health monitoring.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-icmp-private
spec:
  ingress:
  - action: Allow
    destination: {}
    protocol: ICMP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Ingress

---

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-icmp-private-iks
spec:
  ingress:
  - action: Allow
    destination: {}
    protocol: ICMP
    source: {}
  order: 1500
  selector: iks.worker.interface == 'private'
  types:
  - Ingress
